# recursive-conundrum

./: Cargo.toml
guess_game/: Cargo.toml
guess_game/src/: game.rs  lib.rs  main.rs
src/: downloads.rs  main.rs  mcserver.rs  rwlock.rs
src/api/: mod.rs
src/api/game/: mod.rs
src/api/poormaths/: mod.rs
static/: admin.js  index.html  server.js  style.css  user.html  user.js
static/rwlock/: admin.js  user.js
templates/: admin.html.tera  downloads.html.tera  index.html.tera  rwlock_index.html.tera  user.html.tera
templates/game/: new_game.html.tera
templates/mcserver/: index.html.tera
