[package]
name = "recursive-conundrum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]

[dependencies]
serde_json = "1.0.85"
rand = "0.8.5"
guess_game = { path = "guess_game" }

[workspace]

members = [
    "guess_game",
]

[workspace.dependencies]
guess_game = "0.1.0"